--- a/src/styles.css
+++ b/src/styles.css
@@ -46,16 +46,18 @@ section img.background {
 }
 
 h1 {
-  font-family: "Cormorant Garamond", serif;
-  font-size: 7rem;
-  font-weight: 400;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 6rem;
+  color: goldenrod;
+  font-weight: 500;
   line-height: 0.8;
   margin: 0;
 }
 
 h2 {
   font-size: 2rem;
-  font-weight: 400;
+  font-weight: 500;
+  color: goldenrod;
   margin: 0;
   padding-top: 1rem;
 }
